# agentflow-desk

./: .env.example  .gitignore  CONTRIBUTING.md  FINAL_VERIFICATION.md  LICENSE  PROJECT_CHECKLIST.md  README.md  START_HERE.md  UPWORK_APPLICATION_MATERIALS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
app/: __init__.py  main.py
app/api/: knowledge.py  metrics.py  schemas.py  tickets.py
app/core/: config.py  database.py
app/models/: tables.py
app/services/: llm.py  retrieval.py
app/workers/: celery_app.py  tasks.py
docker/: Dockerfile
docs/: design.md
tests/: __init__.py  conftest.py  test_api.py  test_llm.py  test_retrieval.py
